# antiquachain

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  pyproject.toml
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
contracts/contracts/: ArtifactEscrow.sol  ArtifactProvenance.sol
frontend/: build_output.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  font-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.rsc  admin.html  admin.rsc  analytics.html  analytics.rsc  create.html  create.rsc  dashboard.html  dashboard.rsc  index.html  index.rsc  marketplace.html  marketplace.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  verify.html  verify.rsc  wallet.html  wallet.rsc
frontend/.next/server/chunks/: 188.js  312.js  647.js  661.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: mockData.ts  utils.ts
frontend/src/types/: index.ts
openenv_env/: __init__.py  client.py  models.py  openenv.yaml  tasks.py
openenv_env/server/: antiquachain_environment.py  app.py  requirements.txt
openenv_env/tests/: test_env.py
(+69 files in other folders)
