[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antiquachain-openenv"
version = "1.0.0"
description = "AntiquaChain OpenEnv — Antique Marketplace Agentic Environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["openenv_env"]

[tool.pytest.ini_options]
testpaths = ["openenv_env/tests"]
